--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,14 @@ button {
     }
 }
 
+.row-g3 {
+    margin-top: calc(-1 * 30px);
+}
+
+.row-g3 > [class*=col] {
+    margin-top: 30px;
+}
+
 .row-25 {
     margin-left: -2.5px;
     margin-right: -2.5px;
@@ -93,4 +101,93 @@ body {
     background-color: var(--white);
     color: var(--dark-color);
     font: 400 14px/1.3 'Roboto', sans-serif;
+}
+
+.section-gap {
+    padding: 30px 0;
+}
+
+.section-heading {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.section-heading .section-heading_title {
+    font-size: 2.5em;
+    color: var(--dark-color);
+    font-weight: 700;
+}
+
+.service-card {
+    box-shadow: 0 5px 30px -10px rgb(0 143 229 / 30%);
+    border-radius: 8px;
+    height: 100%;
+    padding: 30px;
+}
+
+.service-card .card-header img {
+    display: block;
+    margin: 0 auto;
+    object-fit: contain;
+}
+
+.service-card .card-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.service-card .card-body .card-title {
+    color: var(--dark-color);
+    font-weight: 600;
+    font-size: 1.7em;
+    margin-bottom: 10px;
+}
+
+.service-card .card-body .card-text {
+    color: var(--gray-color);
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+.service-card .card-body .card-text p:last-child {
+    margin-bottom: 0;
+}
+
+.service-card .card-body .card-link {
+    margin-top: auto;
+    color: #337ab7;
+    font-size: 1.25em;
+    transition: var(--transition);
+}
+
+.service-card .card-body .card-link i {
+    font-size: 14px;
+}
+
+.service-card:hover .card-body .card-link {
+    color: #1e4691;
+}
+
+.article-card {
+    height: 100%;
+}
+
+.article-card .card-header img {
+    max-height: 130px;
+}
+
+.article-card .card-body {
+    padding: .5rem .65rem;
+}
+
+.article-card .card-body .card-title {
+    font-size: 1.1em;
+    font-weight: 700;
+    color: var(--dark-color);
+    margin-bottom: .5rem;
+    transition: var(--transition);
+}
+
+.article-card:hover .card-body .card-title {
+    color: #1e4691;
 }
