--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,6 +422,9 @@ body {
     .header .header-inner .header-inner_logo {
         position: relative;
         padding: 10px 0 10px 45px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .header .header-inner .header-inner_logo .header-inner_logo__image {
@@ -465,7 +468,7 @@ body {
     }
 
     .header .header-inner .header-inner_logo .header-inner_hamburger button span {
-        background-color: #656565;
+        background-color: #4d4b4b;
         border-radius: 2px;
         content: '';
         display: block;
@@ -684,7 +687,8 @@ body {
         transition: var(--transition);
     }
 
-    .is-show_navigation .header .header-overlay {
+    .is-show_navigation .header .header-overlay,
+    .is-show_user .header .header-overlay {
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
@@ -747,7 +751,7 @@ body {
     .header .header-inner .header-inner_nav > ul > li > a > span {
         position: absolute;
         top: 0;
-        right: 0px;
+        right: 0;
         width: 40px;
         height: 39px;
         display: flex;
@@ -799,7 +803,6 @@ body {
         margin-bottom: 10px;
     }
 
-
     .header .header-inner .header-inner_nav > ul > li.logo a img {
         max-width: 100%;
         height: 50px;
@@ -811,13 +814,13 @@ body {
     }
 
     .header .header-inner .header-inner_logo .header-inner_mobile__user {
-        position: absolute;
-        top: 50%;
-        right: 0;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        z-index: 201;
+        /*position: absolute;*/
+        /*top: 50%;*/
+        /*right: 0;*/
+        /*-webkit-transform: translateY(-50%);*/
+        /*-ms-transform: translateY(-50%);*/
+        /*transform: translateY(-50%);*/
+        /*z-index: 200;*/
     }
 
     .header .header-inner .header-inner_logo .header-inner_mobile__user > a {
@@ -838,10 +841,101 @@ body {
         font-size: .9em;
         padding: 4px 10px;
     }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner {
+        position: absolute;
+        left: -200%;
+        top: 0;
+        width: calc(75% + 15px);
+        max-width: 100%;
+        height: 100vh;
+        -webkit-transition: var(--transition);
+        -o-transition: var(--transition);
+        transition: var(--transition);
+        z-index: 240;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        background: var(--white);
+        display: block;
+    }
+
+    .is-show_user .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+        left: -15px;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        display: flex;
+        height: 100%;
+        position: relative;
+        width: 100%;
+        padding: 10px 0;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li {
+        margin: 0;
+        width: 100%;
+        border-bottom: 1px solid #eaeaea;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li > a {
+        width: 100%;
+        padding: 10px 8px;
+        position: relative;
+        text-transform: uppercase;
+        font-size: .85rem;
+        color: #343434;
+        display: inline-block;
+        -webkit-transition: .3s all ease;
+        -o-transition: .3s all ease;
+        transition: .3s all ease;
+        white-space: nowrap;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li > a:hover,
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li > a:active {
+        background: #004b7f;
+        color: #fff;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li.logo {
+        position: relative;
+        margin: 0;
+        width: 100%;
+        border-bottom: 1px solid #eaeaea;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li.logo > a {
+        position: relative;
+        display: block;
+        padding: 0 5px;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul > li.logo > a img {
+        max-width: 100%;
+        height: 50px;
+        width: auto;
+    }
 }
 
 @media screen and (max-width: 767px) {
-    .header .header-inner .header-inner_nav > ul {
+    .header .header-inner .header-inner_nav > ul,
+    .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner > ul {
         max-width: 540px;
     }
 }
@@ -859,6 +953,12 @@ body {
     font-size: 2.5em;
     color: var(--dark-color);
     font-weight: 700;
+}
+
+@media screen and (max-width: 991px) {
+    .section-heading .section-heading_title {
+        font-size: 1.8em;
+    }
 }
 
 .section-banner .swiper-slide {
@@ -982,6 +1082,10 @@ body {
 }
 
 @media screen and (max-width: 991px) {
+    .section-banner .swiper-slide {
+        padding: 30px 0;
+    }
+
     .section-banner .swiper-slide .section-banner_title {
         font-size: 1.6em;
         text-align: center;
@@ -1043,6 +1147,16 @@ body {
     color: #1e4691;
 }
 
+@media screen and (max-width: 991px) {
+    .service-card .card-body .card-title {
+        font-size: 1.4em;
+    }
+
+    .service-card .card-body .card-link {
+        font-size: 1.1em;
+    }
+}
+
 .article-card {
     height: 100%;
 }
@@ -1075,6 +1189,7 @@ body {
     height: 40px;
     display: block;
     margin: 0 auto;
+    object-fit: contain;
 }
 
 .footer {
@@ -1219,4 +1334,224 @@ body {
 
 .footer .footer-bottom .footer-bottom_link + .footer-bottom_link {
     margin-left: 8px;
+}
+
+.section-breadcrumb {
+    background: #f7f5f2;
+}
+
+.section-breadcrumb .section-breadcrumb_inner .breadcrumb {
+    margin: 10px 0;
+    background: transparent;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.section-breadcrumb .section-breadcrumb_inner .breadcrumb > .breadcrumb-item {
+    color: #999;
+}
+
+.section-breadcrumb .section-breadcrumb_inner .breadcrumb > .breadcrumb-item > a {
+    font-weight: 500;
+    color: #999;
+}
+
+.section-breadcrumb .section-breadcrumb_inner .breadcrumb > .breadcrumb-item > a:hover {
+    color: #454545;
+}
+
+.section-pagination .section-pagination_inner .pagination {
+    margin-bottom: 0;
+    justify-content: center;
+}
+
+.section-category {
+    padding: 20px 0;
+}
+
+.section-category .category-inner .category-inner_item {
+    display: flex;
+    padding: 10px;
+    background: #fff;
+    position: relative;
+    border: 1px solid #e8e8e8;
+    margin-bottom: 15px;
+}
+
+.section-category .category-inner .category-inner_item .category-image {
+    display: block;
+    flex-shrink: 0;
+    min-width: 160px;
+    width: 200px;
+    position: relative;
+    z-index: 1;
+    border: 1px solid #fff;
+    margin-right: 15px;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
+}
+
+.section-category .category-inner .category-inner_item .category-image img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
+
+.section-category .category-inner .category-inner_item .category-detail {
+    width: 100%;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_title > a {
+    padding-bottom: 10px;
+    display: block;
+    color: #333;
+    font-weight: 500;
+    line-height: 1.6;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_title > a:hover {
+    color: #222;
+    text-decoration: underline !important;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_meta {
+    font-size: 12px;
+    color: #999;
+    margin-bottom: 10px;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_meta span + span {
+    margin-left: 15px;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_link a {
+    color: #0785ad;
+    background: rgba(183, 183, 183, 0.2);
+    border-radius: 4px;
+    display: inline-block;
+    padding: 4px 10px 3px;
+    height: auto;
+    overflow: hidden;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    font-size: 12px;
+}
+
+.section-category .category-inner .category-inner_item .category-detail .category-detail_link a:hover {
+    background: #0785ad;
+    color: #fff;
+}
+
+.sidebar .sidebar-title {
+    font-size: 1.3em;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar .sidebar-title i {
+    margin-top: -1px;
+    display: inline-block;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item {
+    margin-bottom: 15px;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item .sidebar-item_detail .sidebar-item_detail__title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item .sidebar-item_detail .sidebar-item_detail__title > a {
+    font-weight: 600;
+    font-size: 13.5px;
+    color: #337ab7;
+    line-height: 1.5;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item .sidebar-item_detail .sidebar-item_detail__title > a:hover {
+    text-decoration: underline !important;
+    color: #144670;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item .sidebar-item_detail .sidebar-item_detail__meta {
+    margin-top: 5px;
+    font-size: 12px;
+    color: #999;
+}
+
+.sidebar .sidebar-inner .sidebar-inner_item .sidebar-item_image img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+.section-detail {
+    padding: 20px 0;
+}
+
+.section-detail .detail-main .detail-title {
+    font-size: 1.3em;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.section-detail .detail-main .detail-meta {
+    display: flex;
+    align-items: center;
+}
+
+.section-detail .detail-main .detail-meta span {
+    font-size: 12px;
+    color: #999;
+}
+
+.section-detail .detail-main .detail-meta span + span {
+    margin-left: 10px;
+}
+
+.section-detail .detail-main .detail-content {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    line-height: 1.6;
+}
+
+.section-detail .detail-main .detail-content h1 {
+    font-weight: 600;
+    font-size: 1.5em;
+}
+
+.section-detail .detail-main .detail-content h2 {
+    font-weight: 600;
+    font-size: 1.4em;
+}
+
+.section-detail .detail-main .detail-content h3 {
+    font-weight: 600;
+    font-size: 1.3em;
+}
+
+.section-detail .detail-main .detail-content h4 {
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+.section-detail .detail-main .detail-content h5 {
+    font-weight: 600;
+    font-size: 1.1em;
+}
+
+.section-detail .detail-main .detail-content h6 {
+    font-weight: 600;
+    font-size: 1em;
 }
