--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1611,3 +1611,371 @@ body {
 .section-price .price-inner .price-inner_content .table tbody td[rowspan] {
     background: #fff;
 }
+
+.section-block {
+    padding: 20px 0;
+}
+
+.collapse-inner .collapse-item {
+    border: 1px solid #e9e9e9;
+}
+
+.collapse-inner .collapse-item + .collapse-item {
+    border-top: 0;
+}
+
+.collapse-inner .collapse-item .collapse-button {
+    background: #004b7f;
+    color: var(--white);
+    width: 100%;
+    border-radius: 0;
+    font-size: 1.1em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 15px;
+    font-weight: 600;
+}
+
+.collapse-inner .collapse-item .collapse-button:hover {
+    background: #0c5f98;
+}
+
+.collapse-inner .collapse-item .collapse-button > i {
+    transition: var(--transition);
+    font-size: 1.3em;
+}
+
+.collapse-inner .collapse-item .collapse-button[aria-expanded=false] > i {
+    transform: rotate(180deg);
+}
+
+.collapse-inner .collapse-item .list-group-item {
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    padding: 0;
+}
+
+.collapse-inner .collapse-item .list-group-item > a {
+    display: block;
+    padding: 10px 15px;
+    color: #444;
+}
+
+.collapse-inner .collapse-item .list-group-item > a > i {
+    color: #666;
+    margin-right: 8px;
+}
+
+.collapse-inner .collapse-item .list-group-item > a:hover {
+    background: #f6f6f6;
+    color: var(--primary-color);
+}
+
+.collapse-inner .collapse-item .list-group-item:last-child {
+    border-bottom: 0;
+}
+
+.card-price_item .price-item_button {
+    border: 1px solid #e9e9e9;
+    border-radius: 5px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.card-price_item .price-item_button .name {
+    color: #444;
+    font-weight: 500;
+    font-size: 1.05em;
+    letter-spacing: .4px;
+}
+
+.card-price_item .price-item_button .price {
+    color: #004b7f;
+    font-size: 1.25em;
+    font-weight: 600;
+}
+
+.card-price_item .price-item_button:hover {
+    background: #f6f6f6;
+}
+
+.card-price_item .price-item_button.active {
+    background: #004b7f;
+}
+
+.card-price_item .price-item_button.active .name {
+    color: #f6f5f5;
+}
+
+.card-price_item .price-item_button.active .price {
+    color: var(--white);
+}
+
+.price-wallet {
+    border-radius: 5px;
+    background: #f6f6f6;
+    border: 1px solid #e9e9e9;
+    padding: 15px;
+}
+
+.price-wallet .price-wallet_item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.price-wallet .price-wallet_item + .price-wallet_item {
+    margin-top: 10px;
+}
+
+.price-wallet .price-wallet_item .price-wallet_item__text {
+    color: #333;
+    font-weight: 700;
+    font-size: 1.05em;
+}
+
+.price-wallet .price-wallet_item .price-wallet_item__value {
+    font-weight: 700;
+    font-size: 1.15em;
+    color: #e3172a;
+}
+
+.card-cart .card-header .card-title {
+    font-weight: 600;
+    font-size: 1.1em;
+    color: #004b7f;
+}
+
+.card-cart .card-header .card-title span {
+    height: 32px;
+    width: 32px;
+    background: #fff;
+    border: 1px solid #e9e9e9;
+    border-radius: 4px;
+    font-size: 1.1em;
+    color: #004b7f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.section-cart .item:not(:last-of-type) {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.section-cart .cart-name {
+    font-size: 1em;
+    font-weight: 600;
+}
+
+.section-cart .cart-name .cart-price {
+    font-size: 1em;
+    font-weight: 600;
+}
+
+.section-cart .cart-percent {
+    font-size: 90%;
+}
+
+.section-cart .cart-price {
+    font-size: 1em;
+    font-weight: 600;
+    text-align: right;
+}
+
+.section-cart .cart-quantity {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: stretch;
+    -ms-flex-pack: stretch;
+    justify-content: stretch;
+    position: relative;
+}
+
+.section-cart .cart-quantity .button-quantity {
+    outline: none;
+    cursor: pointer;
+    font-size: 0.875rem;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    -o-transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    border: 1px solid rgba(0, 0, 0, 0.19);
+    width: 15px;
+    height: 15px;
+    border-radius: 4px;
+    background: #004b7f;
+    color: var(--white);
+    position: absolute;
+}
+
+.section-cart .cart-quantity .button-quantity.button-quantity_up {
+    top: 2.5px;
+    right: 3px;
+}
+
+.section-cart .cart-quantity .button-quantity.button-quantity_down {
+    bottom: 2.5px;
+    right: 3px;
+}
+
+.section-cart .cart-quantity .button-quantity:disabled {
+    background: #f5f6f6;
+    cursor: not-allowed;
+    color: #333;
+}
+
+.section-cart .cart-quantity .input-quantity {
+    min-width: 60px;
+    max-width: 70px;
+    outline: none;
+    font-size: 1em;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    -o-transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    transition: all 0.1s cubic-bezier(0.4, 0, 0.6, 1);
+    border: 1px solid rgba(0, 0, 0, 0.19);
+    background: transparent;
+    color: rgba(0, 0, 0, 0.8);
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    cursor: text;
+    width: 100%;
+    border-radius: 2px;
+    height: 36px;
+    padding-left: 10px;
+}
+
+.section-cart .cart-delete {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background: var(--danger);
+    color: #fff;
+    font-size: .8em;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
+.section-cart .total {
+    padding: 15px 0;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.section-cart .total .cart-total {
+    font-size: 1.2em;
+    color: #333;
+    font-weight: 600;
+}
+
+.section-cart .total .card-total-value {
+    text-align: right;
+    font-weight: 600;
+    color: var(--danger);
+    font-size: 1.2em;
+}
+
+.section-cart .subtotal {
+    padding: 30px 0;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.section-cart .subtotal + .total {
+    margin-bottom: 0;
+    padding: 30px 0;
+}
+
+.section-cart .subtotal .card-subtotal {
+    font-size: 1.3em;
+    color: #333;
+    font-weight: 600;
+}
+
+.section-cart .subtotal .card-chietkhau {
+    text-align: right;
+    color: #767676;
+    font-size: .9em;
+}
+
+.section-cart .form-inner .custom-control-label::before,
+.section-cart .form-inner .custom-control-label::after {
+    top: 0;
+}
+
+.section-cart .form-inner .btn {
+    font-size: 1em;
+    background: #004b7f;
+    border-color: #004b7f;
+}
+
+.section-cart .form-inner .btn:hover {
+    background: #0c5f98;
+    border-color: #0c5f98;
+}
+
+@media screen and (max-width: 767px) {
+    .card-cart {
+        position: relative;
+        top: unset;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .section-cart .cart-quantity {
+        width: 50%;
+    }
+    .section-cart .cart-quantity .input-quantity {
+        max-width: 100%
+    }
+}
