--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,17 +121,82 @@ button {
     padding: 5px;
 }
 
+.btn-customize {
+    font-size: .95em;
+    color: #fff !important;
+    padding: 0;
+    outline: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    -webkit-transition: background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out !important;
+    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out !important;
+    -o-transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
+    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
+    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out !important;
+    position: relative;
+    border: 0;
+    overflow: hidden;
+}
+
+.btn-customize::before {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    position: absolute;
+    content: "";
+    -webkit-transition: 0.5s all ease-out;
+    -o-transition: 0.5s all ease-out;
+    transition: 0.5s all ease-out;
+}
+
+.btn-customize span {
+    position: relative;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: 700;
+    text-transform: uppercase;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 8px 15px;
+    -webkit-transition: 0.3s all ease-out;
+    -o-transition: 0.3s all ease-out;
+    transition: 0.3s all ease-out;
+    z-index: 2;
+}
+
+.btn-customize:hover::before {
+    width: 100%;
+}
+
+.btn-customize.btn-primary {
+    background: #004b7f;
+    border-color: #004b7f;
+}
+
+.btn-customize.btn-primary::before {
+    background: #045c99;
+    border-color: #045c99;
+}
+
 body {
     background-color: var(--white);
     color: var(--dark-color);
-    font: 400 14px/1.3 'Roboto', sans-serif;
+    font: 400 14px/1.3 'Open Sans', sans-serif;
 }
 
 .header {
-    position: relative;
+    /*position: relative;*/
+    /*z-index: 10;*/
+    /*background: var(--white);*/
+    /*box-shadow: 0 2px 4px rgb(0 0 0 / 20%);*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     z-index: 10;
-    background: var(--white);
-    box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
 }
 
 .header .header-inner .header-inner_logo {
@@ -152,9 +217,10 @@ body {
 
 .header .header-inner .header-inner_nav > ul > li > a {
     text-transform: uppercase;
-    font-size: .9rem;
+    font-size: 1em;
     font-weight: 500;
-    color: #03406b;
+    /*color: #045c99;*/
+    color: var(--white);
     display: inline-block;
     padding: 15px 5px;
     -webkit-transition: .3s all ease;
@@ -178,7 +244,8 @@ body {
     width: 0;
     margin: auto;
     height: 2px;
-    background: #03406b;
+    /*background: #045c99;*/
+    background: var(--white);;
     transition: var(--transition);
 }
 
@@ -192,7 +259,7 @@ body {
     opacity: 0;
     visibility: hidden;
     z-index: -1;
-    border-top: 2px solid #03406b;
+    border-top: 2px solid #045c99;
     -webkit-box-shadow: 3px 3px 5px rgb(0 0 0 / 10%);
     box-shadow: 3px 3px 5px rgb(0 0 0 / 10%);
     min-width: 200px;
@@ -211,7 +278,7 @@ body {
     left: 10px;
     border-right: 8px solid transparent;
     border-left: 8px solid transparent;
-    border-bottom: 8px solid #03406b;
+    border-bottom: 8px solid #045c99;
 }
 
 .header .header-inner .header-inner_nav > ul > li > ul > li > a {
@@ -224,7 +291,7 @@ body {
 }
 
 .header .header-inner .header-inner_nav > ul > li > ul > li > a:hover {
-    background: #03406b;
+    background: #045c99;
     color: var(--white);
 }
 
@@ -249,57 +316,48 @@ body {
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item .btn-register {
-    color: #fff;
     background-color: #fd8a10;
     border-color: #fd8a10;
-    font-size: 1em;
-    padding: 4px 14px;
     margin: 10px 0 10px 10px;
 }
 
-.header .header-inner .header-inner_user .header-inner_user__item .btn-register:hover,
-.header .header-inner .header-inner_user .header-inner_user__item .btn-register:active {
-    background-color: #d7902c;
-    border-color: #d7902c;
+.header .header-inner .header-inner_user .header-inner_user__item .btn-register:before {
+    background-color: #ed800c;
+    border-color: #ed800c;
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item .btn-login {
-    color: #fff;
     background: #004b7f;
     border-color: #004b7f;
-    font-size: 1em;
-    padding: 4px 14px;
     margin: 10px 0 10px 10px;
 }
 
-.header .header-inner .header-inner_user .header-inner_user__item .btn-login:hover,
-.header .header-inner .header-inner_user .header-inner_user__item .btn-login:active {
-    background: #03406b;
-    border-color: #03406b;
+.header .header-inner .header-inner_user .header-inner_user__item .btn-login::before {
+    background: #045c99;
+    border-color: #045c99;
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item .btn-login-outline {
-    color: #004b7f;
-    background: #fff;
-    border-color: #004b7f;
-    font-size: 1em;
-    padding: 4px 14px;
+    color: var(--white) !important;
+    border: 1px solid var(--white);
     margin: 10px 0 10px 10px;
 }
 
-.header .header-inner .header-inner_user .header-inner_user__item:hover .btn-login-outline,
-.header .header-inner .header-inner_user .header-inner_user__item .btn-login-outline:hover,
-.header .header-inner .header-inner_user .header-inner_user__item .btn-login-outline:active {
-    background: #03406b;
-    border-color: #03406b;
-    color: var(--white);
+.header .header-inner .header-inner_user .header-inner_user__item:hover .btn-login-outline:before {
+    background: #045c99;
+}
+
+.header .header-inner .header-inner_user .header-inner_user__item:hover .btn-login-outline {
+    color: var(--white) !important;
+    border-color: #045c99;
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item > span {
     font-size: 1.05em;
     padding-top: 2px;
     display: inline-block;
-    color: #004b7f;
+    color: var(--white);
+    /*color: #004b7f;*/
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item > ul {
@@ -312,7 +370,7 @@ body {
     opacity: 0;
     visibility: hidden;
     z-index: -1;
-    border-top: 2px solid #03406b;
+    border-top: 2px solid #045c99;
     -webkit-box-shadow: 3px 3px 5px rgb(0 0 0 / 10%);
     box-shadow: 3px 3px 5px rgb(0 0 0 / 10%);
     min-width: 200px;
@@ -331,7 +389,7 @@ body {
     right: 10px;
     border-right: 8px solid transparent;
     border-left: 8px solid transparent;
-    border-bottom: 8px solid #03406b;
+    border-bottom: 8px solid #045c99;
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item > ul > li > a {
@@ -346,7 +404,7 @@ body {
 .header .header-inner .header-inner_user .header-inner_user__item > ul > li > a:hover,
 .header .header-inner .header-inner_user .header-inner_user__item > ul > li > a:active {
     color: var(--white);
-    background: #03406b;
+    background: #045c99;
 }
 
 .header .header-inner .header-inner_user .header-inner_user__item:hover > ul {
@@ -357,6 +415,13 @@ body {
     z-index: 1;
 }
 
+.header.header-page {
+    position: relative;
+    z-index: 10;
+    background: var(--white);
+    box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
+}
+
 .header.is-scroll {
     -webkit-animation: header-scroll .2s forwards;
     animation: header-scroll .2s forwards;
@@ -365,12 +430,41 @@ body {
     top: 0;
     left: 0;
     right: 0;
+    background: var(--white);
+    box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
+}
+
+.header.is-scroll .header-inner .header-inner_nav > ul > li > a,
+.header.header-page .header-inner .header-inner_nav > ul > li > a {
+    color: #045c99;
+}
+
+.header.is-scroll .header-inner .header-inner_nav > ul > li > a:before,
+.header.header-page .header-inner .header-inner_nav > ul > li > a:before {
+    background: #045c99;
+}
+
+.header.is-scroll .header-inner .header-inner_user .header-inner_user__item > span,
+.header.header-page .header-inner .header-inner_user .header-inner_user__item > span {
+    color: #004b7f;
+}
+
+.header.is-scroll .header-inner .header-inner_user .header-inner_user__item .btn-login-outline,
+.header.header-page .header-inner .header-inner_user .header-inner_user__item .btn-login-outline {
+    color: #004b7f !important;
+    border: 1px solid #004b7f;
+}
+
+.header.is-scroll .header-inner .header-inner_user .header-inner_user__item:hover .btn-login-outline,
+.header.header-page .header-inner .header-inner_user .header-inner_user__item:hover .btn-login-outline {
+    color: var(--white) !important;
+    border-color: #045c99;
 }
 
 .header.is-scrolled {
     -webkit-animation: header-scrolled .2s forwards;
     animation: header-scrolled .2s forwards;
-    position: relative;
+    /*position: relative;*/
 }
 
 @-webkit-keyframes header-scroll {
@@ -468,12 +562,17 @@ body {
     }
 
     .header .header-inner .header-inner_logo .header-inner_hamburger button span {
-        background-color: #4d4b4b;
+        background-color: #fff;
         border-radius: 2px;
         content: '';
         display: block;
         width: 24px;
-        height: 1px;
+        height: 2px;
+    }
+
+    .header.header-page .header-inner .header-inner_logo .header-inner_hamburger button span,
+    .header.is-scroll .header-inner .header-inner_logo .header-inner_hamburger button span {
+        background-color: #1d1c1c;
     }
 
     .header .header-inner .header-inner_logo .header-inner_hamburger button span:nth-child(1) {
@@ -500,6 +599,10 @@ body {
 
     .is-show_navigation .header .header-inner .header-inner_logo .header-inner_hamburger {
         left: calc(75% + 15px);
+    }
+
+    .is-show_navigation .header .header-inner .header-inner_logo .header-inner_hamburger button span {
+        background-color: #1d1c1c;
     }
 
     .is-show_navigation .header .header-inner .header-inner_logo .header-inner_hamburger button span:nth-child(1) {
@@ -746,6 +849,7 @@ body {
         width: 100%;
         padding: 10px 8px;
         position: relative;
+        color: #045c99;
     }
 
     .header .header-inner .header-inner_nav > ul > li > a > span {
@@ -814,24 +918,22 @@ body {
     }
 
     .header .header-inner .header-inner_logo .header-inner_mobile__user > a {
-        display: inline-block;
-        font-weight: 400;
-        text-align: center;
-        vertical-align: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        line-height: 1.5;
-        border-radius: 0.25rem;
-        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-        color: #004b7f;
+        color: #004b7f !important;
         background: #fff;
         border: 1px solid #004b7f;
-        font-size: .9em;
-        padding: 4px 10px;
-        white-space: nowrap;
+        display: block;
+        border-radius: 4px;
     }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user > a:hover:before {
+        background: #045c99;
+        border-color: #045c99;
+    }
+
+    .header .header-inner .header-inner_logo .header-inner_mobile__user > a:hover {
+        color: var(--white) !important;
+    }
+
 
     .header .header-inner .header-inner_logo .header-inner_mobile__user .header-mobile_user__inner {
         position: absolute;
@@ -957,8 +1059,12 @@ body {
     }
 }
 
+.section-banner {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .section-banner .swiper-slide {
-    padding: 50px 0;
     min-height: 500px;
     display: flex;
     flex-direction: column;
@@ -993,7 +1099,7 @@ body {
     /*border-color: #fd8a10;*/
     border-color: var(--white);
     background: var(--white);
-    color: #03406b;
+    color: #045c99;
     font-weight: 700;
     font-size: 1em;
 }
@@ -1001,8 +1107,8 @@ body {
 .section-banner .swiper-slide .section-banner_button .btn:hover {
     /*background-color: #d7902c;*/
     /*border-color: #d7902c;*/
-    border-color: #03406b;
-    background: #03406b;
+    border-color: #045c99;
+    background: #045c99;
     color: #fff;
 }
 
@@ -1673,14 +1779,55 @@ body {
     padding: 20px 0;
 }
 
+.section-price .price-inner .price-inner_tab .nav-tabs {
+    border-bottom: 0;
+    padding-bottom: 10px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    width: 100%;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    position: relative;
+}
+
+.section-price .price-inner .price-inner_tab .nav-tabs .nav-item {
+    position: relative;
+    margin-left: 6px;
+    max-width: 200px;
+    flex: 1 1 0%;
+}
+
+.section-price .price-inner .price-inner_tab .nav-tabs .nav-item:first-child {
+    margin-left: 0;
+}
+
 .section-price .price-inner .price-inner_tab .nav-tabs .nav-item .nav-link {
-    color: #333;
-    padding: .75rem 1.5rem;
+    margin-bottom: 0;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    font-weight: 500;
     font-size: 1.05em;
+    color: var(--dark-color);
+    -webkit-transition: .2s all ease;
+    -o-transition: .2s all ease;
+    transition: .2s all ease;
+    padding-bottom: 8px;
+    white-space: nowrap;
+    border: 0;
+    border-radius: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: #e7e6e6;
+    display: block;
 }
 
 .section-price .price-inner .price-inner_tab .nav-tabs .nav-item .nav-link.active {
+    color: #fff;
     font-weight: 700;
+    border-color: var(--primary-color);
+    background: var(--primary-color);
 }
 
 .section-price .price-inner .price-inner_content .table thead th {
@@ -1694,11 +1841,15 @@ body {
 .section-price .price-inner .price-inner_content .table thead td,
 .section-price .price-inner .price-inner_content .table tbody th,
 .section-price .price-inner .price-inner_content .table tbody td {
-    padding: 1rem;
+    padding: .65rem 1rem;
 }
 
 .section-price .price-inner .price-inner_content .table tbody tr {
     transition: var(--transition);
+}
+
+.section-price .price-inner .price-inner_content .table tbody tr:nth-child(even) {
+    background: rgba(0, 0, 0, 0.03);
 }
 
 .section-price .price-inner .price-inner_content .table .text-title {
@@ -1789,6 +1940,7 @@ body {
     text-align: center;
     cursor: pointer;
     transition: var(--transition);
+    background-color: rgba(0, 0, 0, .03);
 }
 
 .card-price_item .price-item_button .name {
@@ -1805,7 +1957,7 @@ body {
 }
 
 .card-price_item .price-item_button:hover {
-    background: #f6f6f6;
+    background-color: rgba(0, 0, 0, .05);
 }
 
 .card-price_item .price-item_button.active {
@@ -2051,17 +2203,6 @@ body {
 .section-cart .form-inner .custom-control-label::before,
 .section-cart .form-inner .custom-control-label::after {
     top: 0;
-}
-
-.section-cart .form-inner .btn {
-    font-size: 1em;
-    background: #004b7f;
-    border-color: #004b7f;
-}
-
-.section-cart .form-inner .btn:hover {
-    background: #0c5f98;
-    border-color: #0c5f98;
 }
 
 @media screen and (max-width: 767px) {
